kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/004_cyclicCompositions_05.kmt
/* $Id: 004_cyclicCompositions_05.kmt,v 1.1 2007-09-10 08:35:13 cfaucher Exp $ */

// Test of a invalid associations

package root_package;


/* cyclic composition */
class A {
    attribute b : B[0..1]#a
}
class B {
	attribute a : A[0..*]#b
}

